# micro-game

./: Cargo.toml  README.md  flashDebug.sh  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs  sprites.rs  world.rs
src/world/: entities.rs  seed_rand.rs  sound.rs  sprites.rs
