[package]
name = "micro-game"
version = "0.1.0"
authors = ["Artur Augusto Martins <arturaugusto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m = "^0.6.3"      # Access to the generic ARM peripherals
cortex-m-rt = "^0.6.12"  # Startup code for the ARM Core
embedded-hal = "^0.2.4"  # Access to generic embedded functions (`set_high`)
panic-halt = "^0.2.0"    # Panic handler
cortex-m-semihosting = "0.3.3"
display-interface = "0.4"
display-interface-i2c = "0.4"
display-interface-spi = "0.4"
generic-array = "0.14.2"
embedded-graphics = "0.6.0"
ssd1306 = "0.4.0"
micromath = "1.1.0"
nb = { version = "0.1.1" }
futures = { version = "0.1.23", default-features = false }



[dependencies.microfft]
default-features = false
features = ["maxn-1024"]
version = "0.3.0"

# Access to the stm32f103 HAL.
[dependencies.stm32f1xx-hal]
# Bluepill contains a 64kB flash variant which is called "medium density"
features = ["stm32f103", "rt", "medium"]
version = "^0.6.1"